// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Snapshots > should match snapshot for all variants > badge-danger 1`] = `
<span
  aria-label="1 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-red-500 text-white border-red-500 min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  1
</span>
`;

exports[`Badge > Snapshots > should match snapshot for all variants > badge-default 1`] = `
<span
  aria-label="1 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-gray-500 text-white border-gray-500 min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  1
</span>
`;

exports[`Badge > Snapshots > should match snapshot for all variants > badge-info 1`] = `
<span
  aria-label="1 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-sky-500 text-white border-sky-500 min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  1
</span>
`;

exports[`Badge > Snapshots > should match snapshot for all variants > badge-primary 1`] = `
<span
  aria-label="1 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-[var(--tiger-primary,#2563eb)] text-white border-[var(--tiger-primary,#2563eb)] min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  1
</span>
`;

exports[`Badge > Snapshots > should match snapshot for all variants > badge-success 1`] = `
<span
  aria-label="1 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-green-500 text-white border-green-500 min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  1
</span>
`;

exports[`Badge > Snapshots > should match snapshot for all variants > badge-warning 1`] = `
<span
  aria-label="1 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-yellow-500 text-white border-yellow-500 min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  1
</span>
`;

exports[`Badge > Snapshots > should match snapshot for badge with wrapper 1`] = `
<span
  class="relative inline-flex"
>
  <button>
    Button
  </button>
  <span
    aria-label="3 notifications"
    class="inline-flex items-center justify-center font-medium transition-colors bg-red-500 text-white border-red-500 min-w-5 h-5 text-xs px-1.5 rounded-full absolute -top-1 -right-1"
    role="status"
  >
    3
  </span>
</span>
`;

exports[`Badge > Snapshots > should match snapshot for default badge 1`] = `
<span
  aria-label="5 notifications"
  class="inline-flex items-center justify-center font-medium transition-colors bg-red-500 text-white border-red-500 min-w-5 h-5 text-xs px-1.5 rounded-full"
  role="status"
>
  5
</span>
`;

exports[`Badge > Snapshots > should match snapshot for dot badge 1`] = `
<span
  aria-label="notification"
  class="inline-flex items-center justify-center font-medium transition-colors bg-red-500 text-white border-red-500 w-2.5 h-2.5 rounded-full"
  role="status"
/>
`;
